benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_iter5_error.log
=== Verification Error - Iteration 5 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp.rs
Time: 2025-09-15 20:37:38

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:45:60
   |
45 |             result@ == Str2Int(s@.subrange(0, s@.len().min(i as int))) as u64,
   |                                                        --- ^^^^^^^^ expected `nat`, found `int`
   |                                                        |
   |                                                        arguments to this method are incorrect
   |
help: the return type of this call is `vstd::prelude::int` due to the type of the argument passed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:45:47
   |
45 |             result@ == Str2Int(s@.subrange(0, s@.len().min(i as int))) as u64,
   |                                               ^^^^^^^^^^^^^--------^
   |                                                            |
   |                                                            this argument influences the return type of `min`
note: method defined here
  --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/core/src/cmp.rs:1048:8

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:45:47
   |
45 |             result@ == Str2Int(s@.subrange(0, s@.len().min(i as int))) as u64,
   |                                   --------    ^^^^^^^^^^^^^^^^^^^^^^ expected `int`, found `nat`
   |                                   |
   |                                   arguments to this method are incorrect
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:114:26

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:49:29
   |
49 |         let bit: u64 = if s@[i_int] == '1' { 1 } else { 0 };
   |                             ^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:62:21
   |
62 |         result@ == (Exp_int(x@, y@) % m@) as u64,
   |                     ^^^^^^^ --  -- expected `nat`, found `u64`
   |                             |
   |                             expected `nat`, found `u64`
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:5:13
   |
5  |     spec fn Exp_int(x: nat, y: nat) -> nat
   |             ^^^^^^^ ------  ------

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:62:39
   |
62 |         result@ == (Exp_int(x@, y@) % m@) as u64,
   |                     ------------------^^
   |                     |                 |
   |                     |                 expected `nat`, found `u64`
   |                     arguments to this method are incorrect
   |
help: the return type of this call is `u64` due to the type of the argument passed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:62:20
   |
62 |         result@ == (Exp_int(x@, y@) % m@) as u64,
   |                    ^^^^^^^^^^^^^^^^^^^--^
   |                                       |
   |                                       this argument influences the return type of `spec_euclidean_mod`
note: method defined here
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:1061:8

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0608.
For more information about an error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:45:60
   |
45 |             result@ == Str2Int(s@.subrange(0, s@.len().min(i as int))) as u64,
   |                                                        --- ^^^^^^^^ expected `nat`, found `int`
   |                                                        |
   |                                                        arguments to this method are incorrect
   |
help: the return type of this call is `vstd::prelude::int` due to the type of the argument passed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:45:47
   |
45 |             result@ == Str2Int(s@.subrange(0, s@.len().min(i as int))) as u64,
   |                                               ^^^^^^^^^^^^^--------^
   |                                                            |
   |                                                            this argument influences the return type of `min`
note: method defined here
  --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/core/src/cmp.rs:1048:8

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:45:47
   |
45 |             result@ == Str2Int(s@.subrange(0, s@.len().min(i as int))) as u64,
   |                                   --------    ^^^^^^^^^^^^^^^^^^^^^^ expected `int`, found `nat`
   |                                   |
   |                                   arguments to this method are incorrect
   |
note: method defined here
  --> /Users/runner/work/verus/verus/source/vstd/seq.rs:114:26

error[E0608]: cannot index into a value of type `vstd::seq::Seq<char>`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:49:29
   |
49 |         let bit: u64 = if s@[i_int] == '1' { 1 } else { 0 };
   |                             ^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:62:21
   |
62 |         result@ == (Exp_int(x@, y@) % m@) as u64,
   |                     ^^^^^^^ --  -- expected `nat`, found `u64`
   |                             |
   |                             expected `nat`, found `u64`
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:5:13
   |
5  |     spec fn Exp_int(x: nat, y: nat) -> nat
   |             ^^^^^^^ ------  ------

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:62:39
   |
62 |         result@ == (Exp_int(x@, y@) % m@) as u64,
   |                     ------------------^^
   |                     |                 |
   |                     |                 expected `nat`, found `u64`
   |                     arguments to this method are incorrect
   |
help: the return type of this call is `u64` due to the type of the argument passed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_impl.rs:62:20
   |
62 |         result@ == (Exp_int(x@, y@) % m@) as u64,
   |                    ^^^^^^^^^^^^^^^^^^^--^
   |                                       |
   |                                       this argument influences the return type of `spec_euclidean_mod`
note: method defined here
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:1061:8

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0608.
For more information about an error, try `rustc --explain E0308`.
